# CoordChemPy

./: .copier-answers.yml  .gitattributes  LICENSE  README.md  pyproject.toml  tox.ini
data/: tmQM_X1.xyz  tmQM_X2.xyz
docs/source/: conf.py
docs/source/api/: coordchempy.rst  modules.rst
notebooks/: coordchempy_report.ipynb  ppchem_project.ipynb
src/coordchempy/: __init__.py  coordchempy.py
tests/: test_coordchempy.py  test_example_module.py
